loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:2: error: not found: value exitFound
while(exitFound()) {
      ^